--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   flutter_riverpod: ^2.6.1
   flutter_local_notifications: ^18.0.1
   timezone: ^0.9.4
+  path_provider: ^2.1.5
+  share_plus: ^10.1.3
+  flutter_secure_storage: ^9.2.2
+  crypto: ^3.0.6
+  sentry_flutter: ^8.11.0
+  firebase_core: ^3.12.0
+  firebase_analytics: ^11.5.0
 
 dev_dependencies:
   flutter_test:
