--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.14.1
+  flutter_native_splash: ^2.4.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -81,6 +83,8 @@ flutter:
     - assets/ice.png
     - assets/bg.png
     - assets/happy_penguin.gif
+    - assets/icon_check.png
+    - assets/splash_heart.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -112,3 +116,26 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# アプリアイコンの設定
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon_check.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
+
+# スプラッシュスクリーンの設定
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/splash_heart.png
+  color_dark: "#1E1E1E"
+  image_dark: assets/splash_heart.png
+  android_12:
+    image: assets/splash_heart.png
+    color: "#FFFFFF"
+    image_dark: assets/splash_heart.png
+    color_dark: "#1E1E1E"
+  android: true
+  ios: true
+  web: false
